@@ -298,7 +298,12 @@ class UScanSource(UpstreamSource):
         if r != 0:
             note("uscan could not find the needed tarball.")
             raise PackageVersionNotPresent(package, version, self)
-        return gather_orig_files(package, version, target_dir)
+        orig_files = gather_orig_files(package, version, target_dir)
+        if orig_files is None:
+            note("the expected files generated by uscan could not be found in"
+                 "%s.", target_dir)
+            raise PackageVersionNotPresent(package, version, self)
+        return orig_files
 
 
 class SelfSplitSource(UpstreamSource):
