@@ -2,8 +2,10 @@ bzr-builddeb (2.7.8) UNRELEASED; urgency=low
 
   * Improve error message when tag for upstream version can not be
     found. LP: #783882
+  * Print proper error if uscan doesn't create the expected orig
+    tarball. LP: #818093.
 
- -- Jelmer Vernooij <jelmer@debian.org>  Thu, 11 Aug 2011 17:54:41 +0200
+ -- Jelmer Vernooij <jelmer@debian.org>  Wed, 07 Sep 2011 22:11:47 +0200
 
 bzr-builddeb (2.7.7) unstable; urgency=low
 
